# INZYNIERKA

./: .gitignore  Kconfig  README.md  main.blg
FINALNY/: pick_and_place.csv
HVAC_STM32F7_PCB/: #auto_saved_files#  .~lock.HVAC_STM32F7_PCB.csv#  HVAC_STM32F7_PCB-B_Mask.gbr  HVAC_STM32F7_PCB-B_Paste.gbr  HVAC_STM32F7_PCB-B_Silkscreen.gbr  HVAC_STM32F7_PCB-Back.gbr  HVAC_STM32F7_PCB-Edge_Cuts.gbr  HVAC_STM32F7_PCB-F_Mask.gbr  HVAC_STM32F7_PCB-F_Paste.gbr  HVAC_STM32F7_PCB-F_Silkscreen.gbr  HVAC_STM32F7_PCB-Front.gbr  HVAC_STM32F7_PCB-In1_Cu.gbr  HVAC_STM32F7_PCB-In2_Cu.gbr  HVAC_STM32F7_PCB-job.gbrjob  HVAC_STM32F7_PCB.csv  HVAC_STM32F7_PCB.kicad_pcb  HVAC_STM32F7_PCB.kicad_prl  HVAC_STM32F7_PCB.kicad_pro  HVAC_STM32F7_PCB.kicad_sch  _autosave-HVAC_STM32F7_PCB.kicad_pcb  _autosave-HVAC_STM32F7_PCB.kicad_sch  _autosave-dac.kicad_sch  _autosave-zasilanie.kicad_sch  dac.kicad_sch  dac.kicad_sch-bak  fp-info-cache  fp-lib-table  report.txt  test_project_backup2.kicad_sch  zasilanie.kicad_sch  zasilanie.kicad_sch-bak  ~HVAC_STM32F7_PCB.kicad_pcb.lck  ~HVAC_STM32F7_PCB.kicad_sch.lck
dokumentacja/: abstract.tex  bibliografia.bib  firmware.tex  hardware.tex  intro.tex  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.blg  main.fls  (+10 more)
firmware_v2/: CMakeLists.txt  prj.conf
firmware_v2/boards/: stm32f746g_disco.overlay
firmware_v2/src/: main.c
firmware_v5/: CMakeLists.txt  prj.conf  prj_native_sim.conf
firmware_v5/boards/: native_sim_64.overlay
firmware_v5/src/ikony/: seq_img_cool_dead_heat.c  seq_img_cool_rec_dead_rec_heat.c  snowflake.c  tp_type1_not_active.c
(+61 files in other folders)
